--- a/sfml-pong.vcxproj
+++ b/sfml-pong.vcxproj
@@ -141,7 +141,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="BallBreakout.cpp" />
     <ClCompile Include="Bat.cpp" />
+    <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="SceneBreakout.cpp" />
+    <ClCompile Include="BrickBat.cpp" />
     <ClCompile Include="Framework\Framework.cpp" />
     <ClCompile Include="Framework\GameObject.cpp" />
     <ClCompile Include="Framework\InputMgr.cpp" />
@@ -152,6 +156,7 @@
     <ClCompile Include="SceneDev2.cpp" />
     <ClCompile Include="Framework\SceneMgr.cpp" />
     <ClCompile Include="SceneGame.cpp" />
+    <ClCompile Include="SceneSelectGame.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
@@ -161,7 +166,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
+    <ClInclude Include="BallBreakout.h" />
     <ClInclude Include="Bat.h" />
+    <ClInclude Include="Brick.h" />
+    <ClInclude Include="SceneBreakout.h" />
+    <ClInclude Include="BrickBat.h" />
     <ClInclude Include="Framework\Framework.h" />
     <ClInclude Include="Framework\Defines.h" />
     <ClInclude Include="Framework\GameObject.h" />
@@ -174,6 +183,7 @@
     <ClInclude Include="SceneDev2.h" />
     <ClInclude Include="Framework\SceneMgr.h" />
     <ClInclude Include="SceneGame.h" />
+    <ClInclude Include="SceneSelectGame.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Framework\TextGo.h" />
     <ClInclude Include="Framework\Utils.h" />
